third_party/move/move-compiler-v2/transactional-tests/tests/misc/round-trip/bug_16607.disassembled.exp
processed 1 task
task 0 lines 3-52:  publish [// Bytecode version v8]
Error: error: expected `<newline>`, found `copy`
   ┌─ test:13:22
   │
13 │     local l1: || has copy + drop
   │                      ^^^^


